examples/negative/handle_leak/op_arg_type_mismatch.kai
# Negative fixture (#511 / handle contract): an effect op is
# invoked with an argument of the wrong type (`Int` for a
# `String` parameter). Typer must reject with a clear op-call
# diagnostic, not silently propagate the bad type.

effect Io { print_io(s: String) : Unit }

fn main() : Int {
  handle {
    Io.print_io(42)
    0
  } with Io {
    print_io(s, resume) -> resume(())
    return(x)           -> x
  }
}
